...
                            <constraint firstItem="6Oi-se-gPs" firstAttribute="trailing" secondItem="c7Z-iP-CAG" secondAttribute="trailing" id="UiN-cV-qJf"/>
                            <constraint firstItem="6Oi-se-gPs" firstAttribute="leading" secondItem="c7Z-iP-CAG" secondAttribute="leading" id="Z3Z-uJ-o7D"/>
                            <constraint firstItem="6Oi-se-gPs" firstAttribute="bottom" secondItem="c7Z-iP-CAG" secondAttribute="bottom" id="q8T-IQ-sJr"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="c7Z-iP-CAG"/>
                    </view>
                    <navigationItem key="navigationItem" title="Discover" id="500-Gm-dWx">
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="71f-ge-6Y7">
                            <connections>
                                <segue destination="jUa-8J-Cl4" kind="popoverPresentation" popoverAnchorBarButtonItem="71f-ge-6Y7" id="Lns-n7-lex">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
...
                    <view key="view" contentMode="scaleToFill" id="WT4-FV-kHo">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhU-hz-Dfz">
                                <rect key="frame" x="0.0" y="639" width="375" height="30"/>
                                <state key="normal" title="Choose photo"/>
                                <connections>
                                    <action selector="pickPhoto:" destination="jUa-8J-Cl4" eventType="touchUpInside" id="gpk-98-QGl"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ch1-Jz-kgl">
                                <rect key="frame" x="0.0" y="48" width="375" height="34"/>
...
                                    <constraint firstAttribute="height" constant="34" id="7ic-X6-8yP"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter movie title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yj8-3m-3qY">
                                <rect key="frame" x="16" y="90" width="343" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="jUa-8J-Cl4" id="hDh-se-V2P"/>
                                </connections>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <connections>
                                    <outlet property="delegate" destination="jUa-8J-Cl4" id="6m4-xt-3aX"/>
                                </connections>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oJs-0Y-PoB">
                                <rect key="frame" x="0.0" y="291" width="375" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="29" id="Ag8-1m-x72"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rck-4D-Nzh">
                                <rect key="frame" x="0.0" y="684" width="375" height="30"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="Save:" destination="jUa-8J-Cl4" eventType="touchUpInside" id="phn-Vm-XeZ"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create A Movie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zm1-ny-RSS">
                                <rect key="frame" x="0.0" y="20" width="375" height="20"/>
...
