...
        TMDBClient.getMoviePopular(pageNumber: DiscoverVC.pagenumber, completion: handleResponse(success:error:))
        
        //Observers whether the User added a New Movie or not
        NotificationCenter.default.addObserver(self, selector: #selector(reloadTableView), name: Notification.Name("didCreateMovie"), object: nil)
        
        //Added Accessibilty identifier for Testing purposes
        discoverTableView.accessibilityIdentifier = "DiscoverTableView"
        
    }
    
    //Selector func for Notification
    @objc func reloadTableView(){
        discoverTableView.reloadData()
...
